<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eating.wearight.MainActivity">


    <ImageView

        android:id="@+id/imageView"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:background="@drawable/wallpaper"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="TODO" />



    <TextView

        android:id="@+id/textView"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"

        android:text="@string/app_name"

        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.502"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.134" />



    <TextView

        android:id="@+id/textView2"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:text="@string/app_Cname"

        android:textSize="26sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.2" />



    <TextView

        android:id="@+id/textView3"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:text="@string/email"

        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.24"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.42000002" />



    <TextView

        android:id="@+id/textView5"

        android:layout_width="wrap_content"

        android:layout_height="22dp"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:text="@string/password"

        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.16"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.53999996" />



    <EditText

        android:id="@+id/editText"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:ems="10"

        android:inputType="textEmailAddress"

        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/imageView"

        app:layout_constraintHorizontal_bias="0.958"

        app:layout_constraintStart_toStartOf="@+id/imageView"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.41" />



    <EditText

        android:id="@+id/editText2"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:ems="10"

        android:inputType="textPassword"

        android:textSize="14sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/imageView"

        app:layout_constraintHorizontal_bias="0.958"

        app:layout_constraintStart_toStartOf="@+id/imageView"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.53" />



    <Button

        android:id="@+id/button"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"

        android:layout_marginEnd="24dp"

        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"

        android:text="Log In"

        android:textColor="@color/colorPrimaryDark"

        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.927"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.684" />



</android.support.constraint.ConstraintLayout>

